--- a/ewm-stat-service/pom.xml
+++ b/ewm-stat-service/pom.xml
@@ -26,5 +26,15 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.MadaraFsl</groupId>
+            <artifactId>HibernateUtil</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.MadaraFsl</groupId>
+            <artifactId>HibernateUtil</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
