--- a/ewm-stat-service/stat-server/pom.xml
+++ b/ewm-stat-service/stat-server/pom.xml
@@ -8,28 +8,22 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>ru.practicum.ewm</groupId>
-    <artifactId>stat-dto</artifactId>
-    <version>0.0.1</version>
+    <artifactId>stat-server</artifactId>
     <packaging>jar</packaging>
 
-    <name>stat-dto</name>
+    <name>stat-server</name>
     <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
-            <groupId>com.github.MadaraFsl</groupId>
-            <artifactId>HibernateUtil</artifactId>
-            <version>1.0</version>
+            <groupId>ru.practicum.ewm</groupId>
+            <artifactId>stat-dto</artifactId>
+            <version>0.0.1</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.MadaraFsl</groupId>
-            <artifactId>HibernateUtil</artifactId>
-            <version>1.0</version>
-        </dependency>
-    </dependencies>
 
+    </dependencies>
 </project>
