--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>ewm-stat-service</module>
 		<module>ewm-stat-service/stat-dto</module>
+		<module>ewm-stat-service/stat-server</module>
 	</modules>
 
     <groupId>ru.practicum.ewm</groupId>
@@ -50,6 +51,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 		<!--
 		Database dependensies
 		-->
@@ -65,6 +72,16 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+		</dependency>
+
 		<!--
 		Common dependesies
 		-->
@@ -73,7 +90,15 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 
-	</dependencies>
+		<!--
+		Tests dependensies
+		-->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<pluginManagement>
