--- a/ewm-stat-service/pom.xml
+++ b/ewm-stat-service/pom.xml
@@ -21,20 +21,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.MadaraFsl</groupId>
-            <artifactId>HibernateUtil</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.MadaraFsl</groupId>
-            <artifactId>HibernateUtil</artifactId>
-            <version>1.0</version>
+            <groupId>ru.practicum.ewm</groupId>
+            <artifactId>ewm-utility</artifactId>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 </project>
