--- a/ewm-stat-service/stat-server/pom.xml
+++ b/ewm-stat-service/stat-server/pom.xml
@@ -24,6 +24,22 @@
             <artifactId>stat-dto</artifactId>
             <version>0.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>ru.practicum.ewm</groupId>
+            <artifactId>ewm-utility</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.practicum.ewm</groupId>
+            <artifactId>ewm-utility</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>24.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
