--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,41 @@ version: '3.1'
 
 services:
   stats-server:
+    build: ewm-stat-service/.
+    container_name: ewm-stat-service
+    depends_on:
+      - stats-db
     ports:
       - "9090:9090"
+    environment:
+      - PORT=9090
 
   stats-db:
     image: postgres:14-alpine
+    container_name: ewm-stat-db
+    ports:
+      - "7071:5432"
+    environment:
+      - POSTGRES_DB=stat_db
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+
 
   ewm-service:
+    build: ewn-main-service/.
+    container_name: ewm-main-service
+    depends_on:
+      - ewm-db
+      - stats-server
     ports:
       - "8080:8080"
 
   ewm-db:
     image: postgres:14-alpine
+    container_name: ewm-main-db
+    ports:
+      - "7070:5432"
+    environment:
+      - POSTGRES_DB=ewm_db
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
