--- a/ewm-stat-service/stat-client/pom.xml
+++ b/ewm-stat-service/stat-client/pom.xml
@@ -8,16 +8,28 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>ru.practicum.ewm</groupId>
-    <artifactId>stat-dto</artifactId>
-    <version>0.0.1</version>
+    <artifactId>stat-client</artifactId>
     <packaging>jar</packaging>
 
-    <name>stat-dto</name>
+    <name>stat-client</name>
     <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>ru.practicum.ewm</groupId>
+            <artifactId>stat-dto</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.practicum.ewm</groupId>
+            <artifactId>stat-dto</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
