--- a/ewm-utility/pom.xml
+++ b/ewm-utility/pom.xml
@@ -14,11 +14,16 @@
 
     <name>Ewm common utility module</name>
 
+    <properties>
+        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+    </properties>
+
+
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
-
 </project>
