--- a/ewn-main-service/pom.xml
+++ b/ewn-main-service/pom.xml
@@ -5,19 +5,23 @@
         <groupId>ru.practicum.ewm</groupId>
         <artifactId>explore-with-me</artifactId>
         <version>0.0.1</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>ru.practicum.ewm</groupId>
-    <artifactId>stat-dto</artifactId>
-    <version>0.0.1</version>
+    <artifactId>ewn-main-service</artifactId>
     <packaging>jar</packaging>
 
-    <name>stat-dto</name>
-    <url>http://maven.apache.org</url>
+    <name>ewm-main-service</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
