--- a/ewm-stat-service/pom.xml
+++ b/ewm-stat-service/pom.xml
@@ -2,15 +2,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>ru.practicum</groupId>
+        <groupId>ru.practicum.ewm</groupId>
         <artifactId>explore-with-me</artifactId>
         <version>0.0.1</version>
+        <relativePath/>
     </parent>
 
     <groupId>ru.practicum.ewm</groupId>
     <artifactId>ewm-stat-service</artifactId>
     <version>0.0.1</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>ewm-stat-service</name>
 
