--- a/ewm-statistic/statistic-server/Dockerfile
+++ b/ewm-statistic/statistic-server/Dockerfile
@@ -1,3 +1,3 @@
 FROM amazoncorretto:11
 ADD target/statistic-server-0.0.1.jar stat_serv.jar
-ENTRYPOINT [ "java", "-jar", "stat_serv.jar" ]
+ENTRYPOINT ["-jar", "stat_serv.jar" ]
