--- a/ewm-statistic/statistic-server/src/main/resources/application.properties
+++ b/ewm-statistic/statistic-server/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.sql.init.mode=always
 
 # Spring
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:${STAT_DB_PORT}/${STAT_DB_NAME}
+spring.datasource.url=jdbc:postgresql://ewm-stat-db:${STAT_DB_PORT}/${STAT_DB_NAME}
 spring.datasource.username=${STAT_DB_LOGIN}
 spring.datasource.password=${STAT_DB_PASSWORD}
