--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - stats-db
     ports:
       - "${STAT_PORT}:${STAT_PORT}"
+    networks:
+      - ewm-net
     build: ewm-statistic/statistic-server/.
     environment:
       - STAT_PORT=${STAT_PORT}
@@ -17,6 +19,8 @@ services:
   stats-db:
     container_name: ewm-stat-db
     image: postgres:14-alpine
+    networks:
+      - ewm-net
     ports:
       - "${STAT_DB_PORT}:5432"
     environment:
@@ -34,13 +38,23 @@ services:
     build: ewm-main/.
     environment:
       - MAIN_PORT=${MAIN_PORT}
+      - MAIN_DB_PORT=${STAT_DB_PORT}
+      - MAIN_DB_NAME=${STAT_DB_NAME}
+      - MAIN_DB_LOGIN=${STAT_DB_LOGIN}
+      - MAIN_DB_PASSWORD=${STAT_DB_PASSWORD}
 
   ewm-db:
     container_name: ewm-db
     image: postgres:14-alpine
+    networks:
+      - ewm-net
     ports:
       - "${MAIN_DB_PORT}:5432"
     environment:
       - POSTGRES_DB=${MAIN_DB_NAME}
       - POSTGRES_USER=${MAIN_DB_LOGIN}
       - POSTGRES_PASSWORD=${MAIN_DB_PASSWORD}
+
+networks:
+  ewm-net:
+    driver: bridge
