--- a/ewm-main/src/main/resources/application.properties
+++ b/ewm-main/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 # == Server Config ==
 server.port=${MAIN_PORT}
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.sql.init.mode=always
+
+# Spring
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://127.0.0.1:${MAIN_DB_PORT}/${MAIN_DB_NAME}
+spring.datasource.username=${MAIN_DB_LOGIN}
+spring.datasource.password=${MAIN_DB_PASSWORD}
