--- a/ewm-main/src/main/resources/application.properties
+++ b/ewm-main/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.sql.init.mode=always
 
 # Spring
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://127.0.0.1:${MAIN_DB_PORT}/${MAIN_DB_NAME}
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/${MAIN_DB_NAME}
 spring.datasource.username=${MAIN_DB_LOGIN}
 spring.datasource.password=${MAIN_DB_PASSWORD}
