--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,27 @@
-version: '3.1'
+version: "1"
+
 services:
+
   stats-server:
+    container_name: stats-server
+    depends_on:
+      - stats-db
     ports:
-      - "9090:9090"
+      - "${STAT_PORT}:${STAT_PORT}"
+    build: ewm-statistic/statistic-server/.
+    environment:
+      - STAT_PORT=${STAT_PORT}
+      - STAT_DB_PORT=${STAT_DB_PORT}
+      - STAT_DB_NAME=${STAT_DB_NAME}
+      - STAT_DB_LOGIN=${STAT_DB_LOGIN}
+      - STAT_DB_PASSWORD=${STAT_DB_PASSWORD}
 
   stats-db:
+    container_name: stats-db
     image: postgres:14-alpine
-
-  ewm-service:
     ports:
-      - "8080:8080"
-
-  ewm-db:
-    image: postgres:14-alpine
+      - "${STAT_DB_PORT}:5432"
+    environment:
+      - POSTGRES_DB=${STAT_DB_NAME}
+      - POSTGRES_USER=${STAT_DB_LOGIN}
+      - POSTGRES_PASSWORD=${STAT_DB_PASSWORD}
