--- a/ewm-statistic/statistic-server/pom.xml
+++ b/ewm-statistic/statistic-server/pom.xml
@@ -18,6 +18,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>statistic-dto</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
