--- a/ewm-statistic/statistic-server/pom.xml
+++ b/ewm-statistic/statistic-server/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>statistic-dto</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>ewm-utility</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
