Stats Service with cient builds and runs in docker

--- a/ewm-statistic/pom.xml
+++ b/ewm-statistic/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>statistic-server</module>
         <module>statistic-dto</module>
+        <module>statistic-client</module>
     </modules>
 
     <properties>
