--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,28 @@ services:
       - POSTGRES_DB=${STAT_DB_NAME}
       - POSTGRES_USER=${STAT_DB_LOGIN}
       - POSTGRES_PASSWORD=${STAT_DB_PASSWORD}
+
+  ewm-db:
+    container_name: ewm-db
+    image: postgres:14-alpine
+    ports:
+      - "${MAIN_DB_PORT}:5432"
+    environment:
+      - POSTGRES_DB=${MAIN_DB_NAME}
+      - POSTGRES_USER=${MAIN_DB_LOGIN}
+      - POSTGRES_PASSWORD=${MAIN_DB_PASSWORD}
+
+  ewm-service:
+    container_name: ewm-service
+    depends_on:
+      - stats-server
+      - ewm-db
+    ports:
+      - "${MAIN_PORT}:${MAIN_PORT}"
+    build: ewm-main/.
+    environment:
+      - MAIN_PORT=${MAIN_PORT}
+      - MAIN_DB_PORT=${MAIN_DB_PORT}
+      - MAIN_DB_NAME=${MAIN_DB_NAME}
+      - MAIN_DB_LOGIN=${MAIN_DB_LOGIN}
+      - MAIN_DB_PASSWORD=${MAIN_DB_PASSWORD}
