--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     <modules>
         <module>ewm-statistic</module>
 		<module>ewm-utility</module>
-	</modules>
+        <module>ewm-main</module>
+    </modules>
 
     <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
@@ -37,6 +38,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 
 		<!-- Database dependencies -->
 		<dependency>
