--- a/ewm-statistic/statistic-server/src/main/resources/application.properties
+++ b/ewm-statistic/statistic-server/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.sql.init.mode=always
 
 # Spring
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/${STAT_DB_NAME}
+spring.datasource.url=jdbc:postgresql://stats-db:5432/${STAT_DB_NAME}
 spring.datasource.username=${STAT_DB_LOGIN}
 spring.datasource.password=${STAT_DB_PASSWORD}
