--- a/ewm-main/pom.xml
+++ b/ewm-main/pom.xml
@@ -24,6 +24,16 @@
             <artifactId>ewm-utility</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>statistic-client</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>statistic-dto</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
