--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 
 # Service
 STAT_PORT=9090
+STAT_PATH=stats-server
 
 # Database
 STAT_DB_PORT=7071
@@ -16,6 +17,7 @@ MAIN_PORT=8080
 
 # Database
 MAIN_DB_PORT=7070
+MAIN_DB_PATH=ewm-db
 MAIN_DB_NAME=ewm_db
 MAIN_DB_LOGIN=ewm_login
 MAIN_DB_PASSWORD=ewm_password
