--- a/ewm-statistic/statistic-client/pom.xml
+++ b/ewm-statistic/statistic-client/pom.xml
@@ -24,5 +24,9 @@
             <artifactId>statistic-dto</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 </project>
