User admin functional works
feat: main service tests passed - 230

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ STAT_PATH=stats-server
 
 # Database
 STAT_DB_PORT=7071
+STAT_DB_PATH=stats-db
 STAT_DB_NAME=stat_db
 STAT_DB_LOGIN=stat_login
 STAT_DB_PASSWORD=stat_password
