--- a/ewm-statistic/statistic-server/src/main/resources/application.properties
+++ b/ewm-statistic/statistic-server/src/main/resources/application.properties
@@ -8,13 +8,16 @@ spring.main.show-banner=false
 # == Hibernate ==
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=false
 spring.sql.init.mode=always
 
 # Spring
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://stats-db:5432/${STAT_DB_NAME}
+spring.datasource.url=jdbc:postgresql://${STAT_DB_PATH}:${STAT_DB_PORT}/${STAT_DB_NAME}
 spring.datasource.username=${STAT_DB_LOGIN}
 spring.datasource.password=${STAT_DB_PASSWORD}
+
+# == Logs
+logging.level.ru.practicum=DEBUG
