--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ build/
 ### VS Code ###
 .vscode/
 /ewm-main/src/main/resources/localrun.env
+/ewm-statistic/statistic-server/src/main/resources/localrun.env
