--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     build: ewm-statistic/statistic-server/.
     environment:
       - STAT_PORT=${STAT_PORT}
-      - STAT_DB_PORT=${STAT_DB_PORT}
+      - STAT_DB_PORT=5432
+      - STAT_DB_PATH=${STAT_DB_PATH}
       - STAT_DB_NAME=${STAT_DB_NAME}
       - STAT_DB_LOGIN=${STAT_DB_LOGIN}
       - STAT_DB_PASSWORD=${STAT_DB_PASSWORD}
@@ -20,6 +21,7 @@ services:
   stats-db:
     container_name: stats-db
     image: postgres:14-alpine
+    command: "-c logging_collector=on -c log_statement=all"
     ports:
       - "${STAT_DB_PORT}:5432"
     environment:
@@ -47,8 +49,11 @@ services:
     build: ewm-main/.
     environment:
       - MAIN_PORT=${MAIN_PORT}
-      - MAIN_DB_PORT=${MAIN_DB_PORT}
+      - MAIN_DB_PORT=5432
+      - MAIN_DB_PATH=${MAIN_DB_PATH}
       - MAIN_DB_NAME=${MAIN_DB_NAME}
       - MAIN_DB_LOGIN=${MAIN_DB_LOGIN}
       - MAIN_DB_PASSWORD=${MAIN_DB_PASSWORD}
+      - STAT_PORT=${STAT_PORT}
+      - STAT_PATH=${STAT_PATH}
     restart: on-failure
