--- a/ewm-main/pom.xml
+++ b/ewm-main/pom.xml
@@ -34,6 +34,15 @@
             <artifactId>statistic-dto</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
