--- a/ewm-statistic/pom.xml
+++ b/ewm-statistic/pom.xml
@@ -19,7 +19,15 @@
     </modules>
 
     <properties>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.MadaraFsl</groupId>
+            <artifactId>HibernateUtil</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
