--- a/ewm-statistic/statistic-server/pom.xml
+++ b/ewm-statistic/statistic-server/pom.xml
@@ -13,6 +13,7 @@
     <name>statistic-server</name>
 
     <properties>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>ru.practicum.EwmStatServer</start-class>
     </properties>
@@ -29,8 +30,13 @@
             <version>0.0.1</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.3</version>
         </dependency>
     </dependencies>
 
