--- a/ewm-utility/pom.xml
+++ b/ewm-utility/pom.xml
@@ -14,6 +14,7 @@
     <name>ewm-utility</name>
 
     <properties>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
@@ -21,6 +22,11 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.MadaraFsl</groupId>
+            <artifactId>HibernateUtil</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
