--- a/.env
+++ b/.env
@@ -2,9 +2,11 @@
 
 # Service
 STAT_PORT=9090
+STAT_PATH=stats-server
 
 # Database
 STAT_DB_PORT=7071
+STAT_DB_PATH=stats-db
 STAT_DB_NAME=stat_db
 STAT_DB_LOGIN=stat_login
 STAT_DB_PASSWORD=stat_password
@@ -16,6 +18,7 @@ MAIN_PORT=8080
 
 # Database
 MAIN_DB_PORT=7070
+MAIN_DB_PATH=ewm-db
 MAIN_DB_NAME=ewm_db
 MAIN_DB_LOGIN=ewm_login
 MAIN_DB_PASSWORD=ewm_password
