--- a/ewm-statistic/statistic-client/pom.xml
+++ b/ewm-statistic/statistic-client/pom.xml
@@ -14,6 +14,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
@@ -23,6 +24,19 @@
             <groupId>ru.practicum</groupId>
             <artifactId>statistic-dto</artifactId>
             <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>ewm-utility</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
         </dependency>
     </dependencies>
 </project>
